Fixed issue with the Nav bar overlaping on the blog post title on mobile

--- a/components/main/layout/ArticleHeader/ArticleHeader.module.scss
+++ b/components/main/layout/ArticleHeader/ArticleHeader.module.scss
@@ -67,7 +67,7 @@
   }
 
   .articleheader h1 {
-    margin-top: 0;
+    margin-top: 2rem;
     font-size: 2rem;
     text-align: left;
     word-break: break-word;
